# vmath

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: build.yml  coverage.yml
benchmark/: BUILD  README.md  baseline.txt  benchmark_transform.cpp  benchmark_util.h  vmath_benchmark.cpp
docker/: Dockerfile  run.sh
include/: vmath.h  vmath_impl.h  vmath_types.h  vmath_types_impl.h
sample_coverage/: BUILD  test_lib1.cpp
src/: vmath_compiled_lib.cpp
test/: BUILD  test_vmath.cpp  test_vmath_factories.cpp  test_vmath_functions.cpp  test_vmath_types.cpp  test_vmath_types_matrix3.cpp  test_vmath_types_matrix4.cpp  test_vmath_types_quaternion.cpp  test_vmath_types_transform.cpp  test_vmath_types_vector2.cpp  test_vmath_types_vector3.cpp  test_vmath_types_vector4.cpp  test_vmath_vector2.cpp
var/bazel/: BUILD.eigen
var/bazel/compilation_database/: README.md  aspects.bzl  generate.sh
